--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,7 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
-        tools:targetApi="31">
+        tools:targetApi="34">
+
+        <!-- Actividad principal para el inicio de sesión -->
         <activity
             android:name=".MyCVTechLoginActivity"
             android:exported="true">
@@ -20,6 +25,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Actividad para el perfil (no es principal) -->
+        <activity
+            android:name=".MyCVTechProfileActivity"
+            android:exported="true">
+
+        </activity>
+
     </application>
 
 </manifest>
